# CharenjiZukan

./: .gitignore  README.md  main_extract.py  notebook.ipynb  pyproject.toml  qwen3_asr.py  qwen_tts.py  qwen_tts_notebook.py  run_colab_tests.py  setup_voicevox.py  speed_rate.py  translate_srt.py  translator.py  tts_edgetts.py  tts_srt.py
.roo/: mcp.json
.roo/rules/: 00-project-memory.md  01-request-optimization.md  02-testing-conventions.md
assets/: boxesOCR.txt  pyproject-backup.toml  sample.ass
cli/: __init__.py  demucs_audio.py  extract_srt.py  media_speed.py  merge_srt.py  mute_srt.py  qwen3_asr.py  srt_to_ass.py  sync_video.py  translate_srt.py  tts.py  tts_srt.py  video_ocr.py  video_ocr_native.py  whisper_srt.py
config/: extractor_config.yaml  native_video_ocr_config.yaml  openai_compat_translate.yaml  tts_config.yaml  vertexai_translate.yaml
docs/: colab-guide.md  colab-usage.md  colab-workflow.md  logging-guide.md  testing-guide.md  video-subtitle-extractor.md  workflow.md
logs/: JOURNAL.md  deepseek_modeling_snapshot.py
notebook/: CharenjiZukan.ipynb  voicevox.ipynb
prompts/: gemini-ja-slim.txt  gemini.txt  native_video_ocr_prompt.txt
sync_engine/: __init__.py  analyzer.py  audio_assembler.py  models.py  renderer.py  timestamp_remapper.py  video_processor.py
tests/: __init__.py  conftest.py  run_colab_tests.py  test_analyzer.py  test_ass_utils.py  test_audio_assembler.py  test_concat_demuxer.py  test_demucs_audio.py  test_extractor_config.py  test_matrix.yaml  test_media_speed.py  test_media_utils.py  test_merge_srt.py  test_native_video_ocr.py  test_native_video_ocr_pipeline.py  test_srt_parser.py  test_sync_video_pipeline.py  test_timestamp_remapper.py  test_translation_providers.py  test_tts_edgetts.py  test_video_processor.py
tests/cli/: __init__.py  test_qwen3_asr.py  test_tts_refactor.py
tests/sync_engine/: __init__.py  conftest.py  test_concat_demuxer.py
tests/test_data/: .gitkeep
tests/translation/: __init__.py
tests/tts/: __init__.py
tests/utils/: __init__.py  conftest.py  test_text_segmenter.py
tests/video_ocr/: __init__.py  conftest.py  test_native_video_ocr_pipeline.py
translation/: __init__.py  base.py  factory.py  gemini_provider.py  openai_provider.py  response_parser.py  translator.py  vertexai_provider.py
tts/: base.py  edgetts.py  qwen.py  voicevox.py
utils/: __init__.py  ass_utils.py  audio_utils.py  logger.py  media_utils.py  srt_parser.py  task_utils.py  text_segmenter.py
video_subtitle_extractor/: __init__.py  box_manager.py  chinese_filter.py  deepseek_ocr.py  extractor.py  frame_processor.py  native_video_extractor.py  subtitle_writer.py
video_subtitle_extractor/ocr/: __init__.py  base.py  deepseek.py  factory.py  qwen3vl.py
