[project]
name = "videocolab"
version = "0.1.0"
description = "Video translation and dubbing tools for Google Colab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.3.0",
    "tenacity>=8.0.0",
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "pyrubberband>=0.3.0",
    "soundfile>=0.12.0",
    "aiohttp>=3.8.0",
    "numpy>=1.20.0",
    "demucs>=4.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.scripts]
translate-srt = "cli.translate_srt:main"
tts-srt = "cli.tts_srt:main"
mute-srt = "cli.mute_srt:main"
extract-srt = "cli.extract-srt:main"
merge_srt = "cli/merge_srt.py:main"
demucs-audio = "cli.demucs_audio:main"
media-speed = "cli.media_speed:main"

[tool.setuptools.packages.find]
include = ["cli*", "utils*"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]

[tool.uv.scripts]
test = "pytest tests/ -v"