[project]
name = "videocolab"
version = "0.2.0"
description = "Video translation, dubbing and subtitle extraction tools for Google Colab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.3.0",
    "tenacity>=8.0.0",
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "pyrubberband>=0.3.0",
    "soundfile>=0.12.0",
    "aiohttp>=3.8.0",
    "numpy>=1.20.0",
    "opencv-python>=4.8.0",
    "pyyaml>=6.0",
    "transformers",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "matplotlib>=3.7.0",
    "einops",
    "PyMuPDF",
    "psutil",
    "addict>=2.4.0"
]

[project.scripts]
translate-srt = "cli.translate_srt:main"
tts-srt = "cli.tts_srt:main"
mute-srt = "cli.mute_srt:main"
extract-srt = "cli.extract_srt:main"
merge-srt = "cli.merge_srt:main"
srt-to-ass = "cli.srt_to_ass:main"
demucs-audio = "cli.demucs_audio:main"
media-speed = "cli.media_speed:main"
video-ocr = "cli.video_ocr:main"
video-ocr-native = "cli.video_ocr_native:main"

[tool.setuptools.packages.find]
include = ["cli*", "utils*", "video_subtitle_extractor*"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
