[project]
name = "videocolab"
version = "0.2.0"
description = "Video translation, dubbing and subtitle extraction tools for Google Colab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=0.3.0",
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "pyrubberband>=0.3.0",
    "demucs",
    "einops",
    "PyMuPDF",
    "addict>=2.4.0",
    "imagehash>=4.3.1",
]

[project.scripts]
translate-srt = "cli.translate_srt:main"
tts = "cli.tts:main"
mute-srt = "cli.mute_srt:main"
extract-srt = "cli.extract_srt:main"
merge-srt = "cli.merge_srt:main"
srt-to-ass = "cli.srt_to_ass:main"
demucs-audio = "cli.demucs_audio:main"
media-speed = "cli.media_speed:main"
sync-video = "cli.sync_video:main"
video-ocr = "cli.video_ocr:main"
video-ocr-native = "cli.video_ocr_native:main"
whisper-srt = "cli.whisper_srt:main"
qwen3-asr-srt = "cli.qwen3_asr:main"

[tool.setuptools.packages.find]
include = ["cli*", "utils*", "sync_engine*", "video_subtitle_extractor*", "translation*"]

[project.optional-dependencies]
openai-provider = [
    "openai>=1.35.0",
]
vertexai-provider = []
all-providers = [
    "openai>=1.35.0",
]
qwen-tts = [
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3+cu128torch2.10-cp312-cp312-linux_x86_64.whl",
    "qwen-tts",
    "transformers",
    "accelerate",
    "soundfile"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
